# ElmoHardware

./: .gitignore  CMakeLists.txt  README.md  example_amber_output.txt  example_harpy_output.txt
config/: config.yaml
data/: plot_data.m  plot_sm.m  sw_cw.mat
inc/: ElmoComm.h  ElmoComm.hpp  ElmoInterface.h  ElmoInterface.hpp
src/: ElmoComm.cpp  ElmoInterface.cpp  func_enable_ELMO.c  main.cpp  torque_examples_2drivers.cpp
